# terrabastard

./: .gitpod.yml  .justfile  Cargo.toml  README.md
.github/workflows/: audit.yml  general.yml
src/: cli.rs  lib.rs  main.rs  policy.rs  terraform.rs  walk.rs
src/cli/: mod.rs
src/cli/aws/: iam.rs  mod.rs
src/policy/: json.rs  mod.rs
src/policy/snapshots/: terrabastard__policy__json__test__example_1.snap  terrabastard__policy__json__test__example_2.snap  terrabastard__policy__json__test__example_3.snap  terrabastard__policy__json__test__example_4.snap  terrabastard__policy__json__test__principals_star.snap  terrabastard__policy__json__test__to_hcl_example_1.snap
